<resources>
    <string name="start">开始使用</string>
    <string name="app_name">饭小桶</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="backbtn_desc"></string>
    <string name="menubtn_desc"></string>
    <string name="public_desc"></string>
    <string name="recom">精品推荐</string>
    <string name="store">附近餐馆</string>
    <string name="cart">购餐车</string>
    <string name="orderlist">我的订单</string>
    <string name="splash">上滑可以进入首页</string>
    <string name="default_sales_volume">0</string>
    <string name="default_sales_volume_name">月销量</string>
    <string name="default_store_name">东大美食</string>
    <string name="default_main_food">主售：汉堡 薯条 等快餐</string>
    <string name="store_score_name">评分</string>
    <string name="rank">名次</string>
    <string name="rank_num">0</string>
    <string name="food_name">世纪美味</string>
    <string name="unit">￥</string>
    <string name="price">8</string>
    <string name="search_input_hint">搜索菜品</string>
    <string name="top5_name">精品TOP5</string>
    <string name="competitive">· 精品 ·</string>
    <string name="dish"></string>
    <string name="hot_shop">热店TOP3</string>
    <string name="blank"></string>
    <string name="more_food">更多</string>
    <string name="pull">下拉刷新</string>
    <string name="last_refresh">暂无记录</string>
    <string name="is_refreshing">正在刷新…</string>
    <string name="no_network">没有网络！\n请检查手机设置。</string>
    <string name="detail_information_label">菜品信息</string>
    <string name="default_annoucement">公告：目前暂无公告哦，亲！</string>
    <string name="food_jardiniere_label">配菜：</string>
    <string name="food_flavor_label">口味：</string>
    <string name="loading">加载中……</string>
    <string name="default_price">00</string>
    <string name="rmb_label">元/份</string>
    <string name="default_month_sale_num">0</string>
    <string name="month_sale_icon_label">/份</string>
    <string name="can_order">可订餐</string>
    <string name="not_enough">已售完</string>
    <string name="default_comments_num">0</string>
    <string name="comments_icon_label">条</string>
    <string name="default_star_num">0.0</string>
    <string name="gong">共</string>
    <string name="feng_fan">份饭 ￥</string>
    <string name="enter_cart">进入购餐车</string>
    <string name="default_date">12月24日</string>
    <string name="default_year">2013</string>
    <string name="buy_food_dialog_title">购餐选项</string>
    <string name="flavor_label">可选口味：</string>
    <string name="jardiniere_label">可选配菜：</string>
    <string name="default_flavor">清淡、麻辣</string>
    <string name="default_jardiniere">无</string>
    <string name="tips">请将您的特别要求填在这哦，亲！</string>
    <string name="food_num_label">数量：</string>
    <string name="food_num">1份</string>
    <string name="submit">提交</string>
    <string name="store_info_title">餐馆信息</string>
    <string name="food_tip">菜品</string>
    <string name="annoucement_label">店铺公告：</string>
    <string name="month_saled_label">周销量</string>
    <string name="food_level_label">评价:</string>
    <string name="comment_unit">条</string>
    <string name="food_price_label">价格</string>
    <string name="food_count_unit">份</string>
    <string name="food_cost_unit">元</string>
    <string name="item_food">美食</string>
    <string name="item_food_name">名称</string>
    <string name="item_count">数量</string>
    <string name="item_cost">价格</string>
    <string name="text_toast">:)</string>
    <string name="text_coast">元</string>
    <string name="unlogin_notice">亲，不登陆什么都看不见哦~</string>
    <string name="empty_cart_notice">空空的好不爽~ 去买点什么吧~</string>
    <string name="item_state">状态</string>
    <string name="empty_order_notice">我这里什么也没有..╮(╯_╰)╭</string>
    <string name="register_page_title">外卖盒子 · 东大特享版</string>
    <string name="phone_num_filed_hint">手机号</string>
    <string name="password_first_hint">密码(6至15位)</string>
    <string name="password_second_hint">确认密码</string>
    <string name="register_btn_hint">注  册</string>
    <string name="verification_filed_hint">验证码</string>
    <string name="verification_label">获取验证码</string>
    <string name="question_first">什么是“东大特享版”？</string>
    <string name="answer_first">“外卖盒子 · 东大特享版”是外卖盒子开发团队为东北大学开发的外卖应用。目前仅服务于东北大学在校师生。为东大人提供方便快捷的外卖订餐服务。</string>
    <string name="question_second">“外卖盒子”还有其他版本吗？</string>
    <string name="answer_second">“外卖盒子”服务于大众用户的版本正在全力开发中。新版本将添加更多好玩、有趣、实用的功能！拥有更精致的界面！敬请期待！</string>
    <string name="login_page_title">· 登陆尽享美食 ·</string>
    <string name="rember_password_check_box">记住密码</string>
    <string name="login_btn_hint">登  陆</string>
    <string name="turn_to_register">没有帐号？立即注册</string>
    <string name="login_pad">密码</string>
    <string name="notice_label">备注：记得不要辣椒哦。。。。。。。</string>
    <string name="default_notice">老板，不要辣椒哦~</string>
    <string name="food_cost_label">价格：</string>
    <string name="state_label">状态：</string>
    <string name="cancel_order">取消订单</string>
    <string name="call_for_food">电话订餐</string>
    <string name="notice_filed_hint">亲，这里填您的备注消息~结算了就不能改了哦~</string>
    <string name="delete_order">删除</string>
    <string name="modify_order">修改</string>
    <string name="user_name">饭小桶</string>
    <string name="user_phone_num">1820407****</string>
    <string name="collect_num">0</string>
    <string name="collect_store">收藏店铺</string>
    <string name="collect_food">收藏菜品</string>
    <string name="total_cost">累计订餐</string>
    <string name="phone_ico">绑定手机:</string>
    <string name="change_btn">更改</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_collect_detail">收藏的店铺与菜品</string>
    <string name="history_order">历史订单</string>
    <string name="default_addr">默认送餐地址</string>
    <string name="exit">退出登录</string>
    <string name="default_phone">默认送餐电话</string>
    <string name="evaluate">评价</string>
    <string name="evaluate_detail_food">用户评价</string>
    <string name="has_comment">未评论</string>
    <string name="setting_page_title">设置</string>
    <string name="normal_setting">常规</string>
    <string name="clear_cache">清除缓存</string>
    <string name="push_info">每日精品推送</string>
    <string name="order_state_setting">订单状态提醒</string>
    <string name="wait">待接收</string>
    <string name="cooking">做餐中</string>
    <string name="sending">派送中</string>
    <string name="over_time">卖家超时未确认</string>
    <string name="canseled">卖家取消订单</string>
    <string name="others">其他</string>
    <string name="satisfaction_survey">满意度调查</string>
    <string name="shake">震动</string>
    <string name="ring">响铃</string>
    <string name="do_nothing">不做任何操作</string>
    <string name="suggestion_label">意见反馈</string>
    <string name="suggestion_area_hint">请输入</string>
    <string name="suggestion_tip">您的宝贵意见将为所有“饭小桶”的用户带来更好的体验！饭小桶团队感谢您的支持！</string>
    <string name="cancel_btn_text">取    消</string>
    <string name="submit_btn_text">提    交</string>
    <string name="personal_info_setting_page_title">个人信息设置</string>
    <string name="base_info">基本信息</string>
    <string name="user_account">账号</string>
    <string name="default_account">18204088888</string>
    <string name="register_date">注册时间</string>
    <string name="default_register_date">2014—12—30</string>
    <string name="send_food_info">默认送餐信息</string>
    <string name="school">学校</string>
    <string name="default_school">东北大学</string>
    <string name="position">位置</string>
    <string name="default_posotion">三舍C区</string>
    <string name="phone_num">电话</string>
    <string name="default_phone_num">18204088888</string>
    <string name="dialog_theme">请录入送餐信息</string>
    <string name="submit_capion">请填入您的菜品送达位置</string>
    <string name="left_bracket">(</string>
    <string name="center_content">如：三舍C区</string>
    <string name="right_bracket">)</string>
    <string name="EditText">请输入</string>
    <string name="remark">备注：</string>
    <string name="remark_content">如：接收外卖的电话号码：xxxx</string>
    <string name="jardiniere">jardiniere （切成方块的蔬菜）</string>
    <string name="show_comment">查看评价</string>
    <string name="add_cart">加入购餐车</string>
    <string name="more_comment">更多评价</string>
    <string name="address_label">送餐地址：</string>
    <string name="order_time">下单时间：</string>
    <string name="time">17:27</string>
    <string name="default_comment">麻麻说，能吸引人评论的评论必须是要很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长的评论:)</string>
    <string name="collection_back_text">个人信息</string>
    <string name="back_home_text">主页</string>
    <string name="store_collect">餐馆</string>
    <string name="submit_order">提交订单</string>
    <string name="submit_default_addr">请输入  送餐地址(小于20字)</string>
    <string name="submit_default_phone_num">请输入 接收号码</string>
    <string name="submit_notice_hint">可输入 备注信息(如特殊要求,小于30字)</string>
    <string name="submit_btn_str">提 交</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="default_content">请输入修改的值</string>
    <string name="dialog_title">个人信息修改</string>
    <string name="change_phone_number_dialog_title">修改绑定手机号</string>
    <string name="change_phone_number_default_content">请输入新的手机号码</string>
    <string name="confirm_order_information_dialog_title">订单信息确认</string>
    <string name="notice">注：请仔细检查订单信息，订单提交以后，信息便无法更改！</string>
    <string name="receive_phone_num">收餐电话号码：</string>
    <string name="confirm">确定</string>
    <string name="init_text">已下載0%</string>
    <string name="delete_phone">删除账号</string>
    <string name="delete_dialog_content">您确定删除饭小桶账号1388984****？</string>
    <string name="cancel">取消</string>
    <string name="delete_box_label">删除相关购物车记录</string>
    <string name="floor_label">楼</string>
    <string name="num">0</string>
    <string name="make_sure">确认下载</string>
    <string name="dialog_content">www.fanxiaotong.com</string>
    <string name="sure">确认</string>
    <string name="receive_food">确认收货</string>
    <string name="receive_food_btn">确认</string>
    <string name="no_receive_food_btn">取消</string>
    <string name="overtime_title">超时处理</string>
    <string name="give_up">放弃</string>
    <string name="send_feedback">发送</string>
    <string name="feedback_input_hint">您的宝贵意见</string>
    <string name="feedback_tip">您的宝贵意见将帮助我们更好的完善本应用，我们也将更好地为您提供服务 :)</string>
    <string name="old_feedback">提过的意见</string>
    <string name="no_feedback">暂无意见</string>
    <string name="email_label">请填入您的Email地址，我们将针对该问题联系您:)</string>
    <string name="email_hint">Email邮箱</string>
    <string name="refuse">订单被拒</string>
    <string name="overtime">订单超时</string>
    <string name="clrar_cache_content">清除缓存后，首次访问将使用较多流量，若不是在存储紧张的情况下，不建议清空缓存。</string>
    <string name="clear_bt">清除</string>
    <string name="forget_psw">找回密码</string>
    <string name="new_pasd">请输入新密码(6至15位)</string>
    <string name="pwd_again">再次输入</string>
    <string name="modify_psd">修改密码</string>
    <string name="safety_warning">网络提示</string>
    <string name="safety_warning_dialog_content">由于网络原因，你已掉线，请重新登录！</string>
    <string name="login_text">登陆</string>
    <string name="nick_name">昵称</string>
    <string name="head_logo">头像</string>
    <string name="agree_the_rule">我同意《“饭小桶”软件使用协议》</string>
</resources>