<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/order_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/single_store_selector"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/food_logo"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/download"
                android:contentDescription="@string/public_desc" />

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/recommend_selector"
                android:contentDescription="@string/public_desc" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/food_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/food_name"
                android:textSize="@dimen/text_size_2" />

            <TextView
                android:id="@+id/jardiniere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:maxLength="10"
                android:text="@string/food_jardiniere_label"
                android:textColor="@color/world_color"
                android:textSize="@dimen/text_size_0" />

            <TextView
                android:id="@+id/flavor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:text="@string/food_flavor_label"
                android:textColor="@color/world_color"
                android:textSize="@dimen/text_size_0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="5dp" >

            <TextView
                android:id="@+id/food_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_num"
                android:textSize="@dimen/text_size_3" />

            <TextView
                android:id="@+id/notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:maxLines="2"
                android:text="@string/notice_label"
                android:textColor="@color/world_color"
                android:textSize="@dimen/text_size_0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/food_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_price"
                android:textSize="@dimen/text_size_4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/food_cost_unit"
                android:textSize="@dimen/text_size_0" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/dotted_line_2"
        android:layerType="software" />

</LinearLayout>