<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/light_gray"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/head_contentLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp" >

        <!-- 箭头图像、进度条 -->

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp" >

            <!-- 箭头 -->

            <ImageView
                android:id="@+id/indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/public_desc"
                android:padding="7dp"
                android:src="@drawable/refresh_arrow_down" />

            <!-- 进度条 -->

            <ProgressBar
                android:id="@+id/progress"
                style="@android:style/Widget.ProgressBar.Small.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>

        <!-- 提示、最近更新 -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <!-- 提示 -->

            <TextView
                android:id="@+id/refresh_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pull"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_1" />

            <!-- 最近更新 -->

            <TextView
                android:id="@+id/refresh_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_refresh"
                android:textColor="@color/light_black"
                android:textSize="@dimen/text_size_0" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>